<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txv_input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@color/colorAccent"
            android:text="@string/clear"
            android:textColor="#FFFFFF" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@color/colorAccent"
            android:text="@string/equals"
            android:textColor="#FFFFFF" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="@color/colorPrimary"
            android:text="@string/del"
            android:textColor="#F44336" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_seven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_7"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_four"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_4"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_eight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_8"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_5"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_2"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_zero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_0"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_nine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_9"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_6"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:onClick="onClick"
                android:text="@string/_3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="#000000"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:text="@string/add"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_subtract"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:text="@string/minus"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:text="@string/multiply"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:text="@string/divide"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>